--- a/sidebar/google.html
+++ b/sidebar/google.html
@@ -202,10 +202,10 @@
             width: fit-content;
             border-radius: 4px;
         }
-        
-        .megic-btn:hover, 
+
+        .megic-btn:hover,
         .megic-btn:focus,
-        .megic-btn:active{
+        .megic-btn:active {
             background-color: rgb(245, 115, 137);
             color: white !important;
             outline: none;
@@ -243,9 +243,9 @@
             /* Controls the speed of progress bar filling */
         }
 
-        .upgrade-btn:hover, 
+        .upgrade-btn:hover,
         .upgrade-btn:focus,
-        .upgrade-btn:active{
+        .upgrade-btn:active {
             background-color: rgb(252, 151, 167);
             color: white !important;
             outline: none;
@@ -487,7 +487,7 @@
 
                     <div class="features-list mt-2 ">
 
-                        <div class="card-bg mb-2 shadow-sm" onclick="showDetailsPage()">
+                        <div class="card-bg mb-2 shadow-sm" onclick="showAiPage()">
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
@@ -504,7 +504,8 @@
                                                         alt="">&nbsp;<span>3</span>
                                                 </div>
                                             </div>
-                                            <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dynamic data</p>
+                                            <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dynamic data
+                                            </p>
                                         </div>
                                     </div>
 
@@ -513,24 +514,25 @@
 
                         </div>
 
-                        <div class="card-bg mb-2 shadow-sm" onclick="showDetailsPage()">
+                        <div class="card-bg mb-2 shadow-sm" onclick="showGooglePage()">
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/google.png"
-                                                alt="chatgpt" class="feature-icon">
+                                            <img src="https://mergeasy123.netlify.app/sidebar/google.png" alt="chatgpt"
+                                                class="feature-icon">
 
                                         </div>
                                         <div class="">
                                             <div class="d-flex align-items-start justify-content-between">
-                                                <h3 class="heading-secondry "> Perform a Google Search                                                </h3>
+                                                <h3 class="heading-secondry "> Perform a Google Search </h3>
                                                 <div class="credit-number ">
                                                     <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
                                                         alt="">&nbsp;<span>3</span>
                                                 </div>
                                             </div>
-                                            <p class="text mb-0 pb-0">Perform any kind of search query using Google’s search engine.</p>
+                                            <p class="text mb-0 pb-0">Perform any kind of search query using
+                                                Google’s search engine.</p>
                                         </div>
                                     </div>
 
@@ -539,34 +541,7 @@
 
                         </div>
 
-                        <div class="card-bg mb-2 shadow-sm" onclick="showDetailsPage()">
-                            <a class="text-decoration-none">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex align-items-start">
-                                        <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png"
-                                                alt="chatgpt" class="feature-icon">
-
-                                        </div>
-                                        <div class="">
-                                            <div class="d-flex align-items-start justify-content-between">
-                                                <h3 class="heading-secondry ">ChatGPT custom prompt</h3>
-                                                <div class="credit-number ">
-                                                    <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
-                                                        alt="">&nbsp;<span>3</span>
-                                                </div>
-                                            </div>
-                                            <p class="text mb-0 pb-0">Lorem ipsum is to dolor sit, amet consectetur
-                                                adipisicing.</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </a>
-
-                        </div>
-
-                        <div class="card-bg mb-2 shadow-sm" onclick="showDetailsPage()">
+                        <div class="card-bg mb-2 shadow-sm" onclick="showAiPage()">
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
@@ -593,7 +568,7 @@
 
                         </div>
 
-                        <div class="card-bg mb-2 shadow-sm" onclick="showDetailsPage()">
+                        <div class="card-bg mb-2 shadow-sm" onclick="showAiPage()">
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
@@ -620,7 +595,7 @@
 
                         </div>
 
-                        <div class="card-bg mb-2 shadow-sm" onclick="showDetailsPage()">
+                        <div class="card-bg mb-2 shadow-sm" onclick="showGooglePage()">
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
@@ -647,7 +622,34 @@
 
                         </div>
 
-                        <div class="card-bg mb-2 shadow-sm" onclick="showDetailsPage()">
+                        <div class="card-bg mb-2 shadow-sm" onclick="showAiPage()">
+                            <a class="text-decoration-none">
+                                <div class="d-flex align-items-center">
+                                    <div class="d-flex align-items-start">
+                                        <div class="feature-icon-div">
+                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png"
+                                                alt="chatgpt" class="feature-icon">
+
+                                        </div>
+                                        <div class="">
+                                            <div class="d-flex align-items-start justify-content-between">
+                                                <h3 class="heading-secondry ">ChatGPT custom prompt</h3>
+                                                <div class="credit-number ">
+                                                    <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
+                                                        alt="">&nbsp;<span>3</span>
+                                                </div>
+                                            </div>
+                                            <p class="text mb-0 pb-0">Lorem ipsum is to dolor sit, amet consectetur
+                                                adipisicing.</p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="card-bg mb-2 shadow-sm" onclick="showAiPage()">
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-start">
                                     <div class="feature-icon-div">
@@ -977,10 +979,10 @@
             </div>
         </div>
         <!--Feature Details Screen -->
-        <div id="details-screen" class="details">
+        <div id="ai-screen" class="details">
             <button onclick="goBack()" class="go-back">Go Back</button>
             <div id="details-content">
-                <div class=" mb-2 " onclick="showDetailsPage()">
+                <div class=" mb-2 ">
                     <a class="text-decoration-none">
                         <div class="d-flex align-items-center">
                             <div class="d-flex align-items-start">
@@ -1014,7 +1016,7 @@
                 <textarea name="" id="" class="w-100 searchbar" placeholder="Write Prompt"></textarea>
                 <p class="text mb-0 ">Press # to select a variable cell</p>
                 <h2 class="heading-primary mt-3">
-                    Search  Prompt Library
+                    Search Prompt Library
                 </h2>
                 <div class="search-input ">
                     <input type="search" name="" id="" class="w-100 searchbar" placeholder="Search or ask anything...">
@@ -1195,6 +1197,108 @@
                 </div>
             </div>
         </div>
+        <!--Google Screen -->
+        <div id="google-screen" class="details">
+            <button onclick="goBack()" class="go-back">Go Back</button>
+            <div id="details-content">
+                <div class=" mb-2 ">
+                    <a class="text-decoration-none">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-start">
+                                <div class="feature-icon-div">
+                                    <img src="https://mergeasy123.netlify.app/sidebar/google.png" alt="chatgpt"
+                                        class="feature-icon2">
+                                </div>
+                                <div class="">
+                                    <div class="d-flex align-items-start justify-content-between">
+                                        <h3 class="heading-secondry">Perform a Google Search </h3>
+                                        <div class="credit-number ">
+                                            <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
+                                                alt="">&nbsp;<span>3</span>
+                                        </div>
+                                    </div>
+                                    <p class="text mb-0 pb-0">Perform any kind of search query using
+                                        Google’s search engine.</p>
+                                    <a href="" class="tutorial"><i class="bi bi-play-circle"></i>&nbsp;Watch Full
+                                        Tutorial</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </a>
+
+                </div>
+                <hr>
+                <!-- <h2 class="heading-primary">
+                    Water Prompt
+                </h2> -->
+                <!-- <textarea name="" id="" class="w-100 searchbar" placeholder="Write Prompt"></textarea> -->
+                <!-- <p class="text mb-0 ">Press # to select a variable cell</p> -->
+                <h2 class="heading-primary mt-3">
+                    Google Search Query
+                </h2>
+                <div class="search-input ">
+                    <input type="search" name="" id="" class="w-100 searchbar" placeholder="Search or ask anything...">
+                </div>
+                <h2 class="heading-primary mt-3">
+                    Number of Results
+                </h2>
+                <div class="search-input ">
+                    <input type="number" name="" id="" class="w-100 searchbar" placeholder="10">
+                </div>
+                <h2 class="heading-primary mt-3">
+                    Language
+                </h2>
+                <div class="search-input ">
+                    <input type="text" name="" id="" class="w-100 searchbar" placeholder="English">
+                </div>
+                <h2 class="heading-primary mt-3">
+                    Country
+                </h2>
+                <div class="search-input ">
+                    <input type="text" name="" id="" class="w-100 searchbar" placeholder="US">
+                </div>
+                <h2 class="heading-primary mt-3">
+                    Output (Cell Range)
+                </h2>
+                <div class="search-input  output-div">
+                    <input type="text" name="" id="" class="w-100 searchbar">
+                    <!-- <p class="text mb-0 ">Press # to select a variable cell</p> -->
+                </div>
+
+                <!-- <div class="">
+                    <button class="w-100 mt-2 megic-btn">Let the magic begin ✨</button>
+                </div> -->
+                <div class="">
+                    <button id="magic-btn" class="w-100 mt-2 megic-btn">Search ✨</button>
+                </div>
+                <div class="progress-container">
+                    <div id="progress-bar" class="progress-bar"></div>
+                </div>
+                <div class="d-flex justify-content-between mt-3">
+                    <div class="d-flex align-items-center">
+                        <div class="upgrade-icon">
+                            <img src="https://mergeasy123.netlify.app/sidebar/credit.png" alt="">&nbsp;&nbsp;
+                        </div>
+                        <div class="upgrade-text ">
+                            100/100 Credits left
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center ">
+                        <div class="upgrade-text ">
+                            <a href="" class="">Free Credits</a>
+                        </div>
+                        <div class="upgrade-icon2">
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt="">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="">
+                    <button class="w-100  upgrade-btn">UPGRADE</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -1253,40 +1357,48 @@
 
     <script>
         // Function to show the details page and hide the home screen
-        function showDetailsPage() {
+        function showAiPage() {
             document.getElementById('home-screen').style.display = 'none'; // Hide home screen
-            document.getElementById('details-screen').style.display = 'block'; // Show details page
+            document.getElementById('ai-screen').style.display = 'block'; // Show details page
+            document.querySelector('.go-back').style.display = 'block'; // Show go back button
+            document.querySelector('.logo').style.display = 'none';
+        }
+        // Function to show the details page and hide the home screen
+        function showGooglePage() {
+            document.getElementById('home-screen').style.display = 'none'; // Hide home screen
+            document.getElementById('google-screen').style.display = 'block'; // Show details page
             document.querySelector('.go-back').style.display = 'block'; // Show go back button
             document.querySelector('.logo').style.display = 'none';
         }
 
         // Function to go back to the home screen
         function goBack() {
-            document.getElementById('details-screen').style.display = 'none'; // Hide details page
+            document.getElementById('ai-screen').style.display = 'none'; // Hide details page
+            document.getElementById('google-screen').style.display = 'none'; // Hide details page
             document.getElementById('home-screen').style.display = 'block'; // Show home screen
             document.querySelector('.go-back').style.display = 'none';
             document.querySelector('.logo').style.display = 'block';
         }
     </script>
     <script>
-   document.getElementById('magic-btn').addEventListener('click', function() {
-  // Show the progress bar
-  const progressContainer = document.querySelector('.progress-container');
-  const progressBar = document.getElementById('progress-bar');
-  
-  progressContainer.style.display = 'block';
-  progressBar.style.width = '0%';  // Reset the progress bar before starting
-  
-  // Start filling the progress bar
-  setTimeout(() => {
-    progressBar.style.width = '100%'; // Fills the bar
-  }, 100); // Small delay for UX
-  
-  // Hide the progress bar after it fills
-  setTimeout(() => {
-    progressContainer.style.display = 'none';
-  }, 2100); // Timeout matches the transition duration (2s) + small buffer
-});
+        document.getElementById('magic-btn').addEventListener('click', function () {
+            // Show the progress bar
+            const progressContainer = document.querySelector('.progress-container');
+            const progressBar = document.getElementById('progress-bar');
+
+            progressContainer.style.display = 'block';
+            progressBar.style.width = '0%';  // Reset the progress bar before starting
+
+            // Start filling the progress bar
+            setTimeout(() => {
+                progressBar.style.width = '100%'; // Fills the bar
+            }, 100); // Small delay for UX
+
+            // Hide the progress bar after it fills
+            setTimeout(() => {
+                progressContainer.style.display = 'none';
+            }, 2100); // Timeout matches the transition duration (2s) + small buffer
+        });
 
     </script>
 </body>
